@@ -2,7 +2,10 @@ package com.artkuznet.converter;
 
 import com.artkuznet.converter.ldb.vertex.VertexUV;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Vector3D {
 
@@ -51,20 +54,20 @@ public class Vector3D {
     }
 
     public Vector3D rotateAxis(double angle, Vector3D axis) {
-        var u = axis.clone().normalize();
-        var o = angle * Math.PI / 180.;
+        Vector3D u = axis.clone().normalize();
+        double o = angle * Math.PI / 180.;
 
-        var m00 = Math.cos(o) + u.x * u.x * (1. - Math.cos(o));
-        var m01 = u.x * u.y * (1. - Math.cos(o)) - u.z * Math.sin(o);
-        var m02 = u.x * u.z * (1. - Math.cos(o)) + u.y * Math.sin(o);
+        double m00 = Math.cos(o) + u.x * u.x * (1. - Math.cos(o));
+        double m01 = u.x * u.y * (1. - Math.cos(o)) - u.z * Math.sin(o);
+        double m02 = u.x * u.z * (1. - Math.cos(o)) + u.y * Math.sin(o);
 
-        var m10 = u.y * u.x * (1. - Math.cos(o)) + u.z * Math.sin(o);
-        var m11 = Math.cos(o) + u.y * u.y * (1. - Math.cos(o));
-        var m12 = u.y * u.z * (1. - Math.cos(o)) - u.x * Math.sin(o);
+        double m10 = u.y * u.x * (1. - Math.cos(o)) + u.z * Math.sin(o);
+        double m11 = Math.cos(o) + u.y * u.y * (1. - Math.cos(o));
+        double m12 = u.y * u.z * (1. - Math.cos(o)) - u.x * Math.sin(o);
 
-        var m20 = u.z * u.x * (1. - Math.cos(o)) - u.y * Math.sin(o);
-        var m21 = u.z * u.y * (1. - Math.cos(o)) + u.x * Math.sin(o);
-        var m22 = Math.cos(o) + u.z * u.z * (1. - Math.cos(o));
+        double m20 = u.z * u.x * (1. - Math.cos(o)) - u.y * Math.sin(o);
+        double m21 = u.z * u.y * (1. - Math.cos(o)) + u.x * Math.sin(o);
+        double m22 = Math.cos(o) + u.z * u.z * (1. - Math.cos(o));
 
         return rotate(new double[][]{
                 new double[]{m00, m01, m02},
@@ -74,7 +77,7 @@ public class Vector3D {
     }
 
     public Vector3D rotateX(double angle) {
-        var rad = angle * Math.PI / 180.0;
+        double rad = angle * Math.PI / 180.0;
 
         return rotate(new double[][]{
                 new double[]{1, 0, 0},
@@ -84,7 +87,7 @@ public class Vector3D {
     }
 
     public Vector3D rotateY(double angle) {
-        var rad = angle * Math.PI / 180.0;
+        double rad = angle * Math.PI / 180.0;
 
         return rotate(new double[][]{
                 new double[]{Math.cos(rad), 0, Math.sin(rad)},
@@ -94,7 +97,7 @@ public class Vector3D {
     }
 
     public Vector3D rotateZ(double angle) {
-        var rad = angle * Math.PI / 180.0;
+        double rad = angle * Math.PI / 180.0;
 
         return rotate(new double[][]{
                 new double[]{Math.cos(rad), -Math.sin(rad), 0},
@@ -112,15 +115,15 @@ public class Vector3D {
     }
 
     public Vector3D multiply(Vector3D p) {
-        var i = this.y * p.z - this.z * p.y;
-        var j = this.x * p.z - this.z * p.x;
-        var k = this.x * p.y - this.y * p.x;
+        double i = this.y * p.z - this.z * p.y;
+        double j = this.x * p.z - this.z * p.x;
+        double k = this.x * p.y - this.y * p.x;
 
         return new Vector3D(i, -j, k);
     }
 
     public double angle(Vector3D point) {
-        var ab = x * point.x + y * point.y + z * point.z;
+        double ab = x * point.x + y * point.y + z * point.z;
 
         return Math.acos(ab / (this.magnitude() * point.magnitude())) * 180.0 / Math.PI;
     }
@@ -206,28 +209,28 @@ public class Vector3D {
     }
 
     public Vector3D normalize() {
-        var u = magnitude();
+        double u = magnitude();
 
         return new Vector3D(this.x / u, this.y / u, this.z / u);
     }
 
     public static Vector3D P(Vector3D n1, Vector3D n2) {
-        var p = new Vector3D(n1.y * n2.z - n1.z * n2.y, n1.z * n2.x - n1.x * n2.z, n1.x * n2.y - n1.y * n2.x);
+        Vector3D p = new Vector3D(n1.y * n2.z - n1.z * n2.y, n1.z * n2.x - n1.x * n2.z, n1.x * n2.y - n1.y * n2.x);
 
         return p.clone().softSmooth().equals(new Vector3D(0, 0, 0)) ? new Vector3D(-1, 0, 0) : p;
     }
 
     public static Vector3D center(List<Vector3D> points) {
-        var x = points.stream().map(Vector3D::getX).reduce(Double::sum).orElseThrow();
-        var y = points.stream().map(Vector3D::getY).reduce(Double::sum).orElseThrow();
-        var z = points.stream().map(Vector3D::getZ).reduce(Double::sum).orElseThrow();
+        Double x = points.stream().map(Vector3D::getX).reduce(Double::sum).orElseThrow(null);
+        Double y = points.stream().map(Vector3D::getY).reduce(Double::sum).orElseThrow(null);
+        Double z = points.stream().map(Vector3D::getZ).reduce(Double::sum).orElseThrow(null);
 
         return new Vector3D(x / points.size(), y / points.size(), z / points.size());
     }
 
     public static Vector3D calculateNormal(Vector3D p1, Vector3D p2, Vector3D p3) {
-        var v1 = p2.clone().minus(p1.clone());
-        var v2 = p3.clone().minus(p1.clone());
+        Vector3D v1 = p2.clone().minus(p1.clone());
+        Vector3D v2 = p3.clone().minus(p1.clone());
 
         return v1.multiply(v2).normalize();
     }
@@ -242,8 +245,8 @@ public class Vector3D {
 
     public static List<Vector3D> findTriangle(List<Vector3D> points) {
         for (int i = 2; i < points.size(); i++) {
-            var triangle = List.of(points.get(0).clone(), points.get(1).clone(), points.get(i).clone());
-            var testNormal = calculateNormal(triangle);
+            List<Vector3D> triangle = Arrays.asList(points.get(0).clone(), points.get(1).clone(), points.get(i).clone());
+            Vector3D testNormal = calculateNormal(triangle);
             if (!Double.isNaN(testNormal.x) && !Double.isNaN(testNormal.y) && !Double.isNaN(testNormal.z)) {
                 return triangle;
             }
@@ -253,29 +256,29 @@ public class Vector3D {
     }
 
     public static List<Vector3D> moveCenter(List<Vector3D> points) {
-        var center = center(points);
+        Vector3D center = center(points);
 
-        return points.stream().map(p -> p.clone().minus(center)).toList();
+        return points.stream().map(p -> p.clone().minus(center)).collect(Collectors.toList());
     }
 
     public static double sizeX(List<Vector3D> points) {
-        var min = points.stream().map(Vector3D::getX).min(Double::compareTo).orElseThrow();
-        var max = points.stream().map(Vector3D::getX).max(Double::compareTo).orElseThrow();
+        Double min = points.stream().map(Vector3D::getX).min(Double::compareTo).orElseThrow(null);
+        Double max = points.stream().map(Vector3D::getX).max(Double::compareTo).orElseThrow(null);
 
         return max - min;
     }
 
     public static double sizeY(List<Vector3D> points) {
-        var min = points.stream().map(Vector3D::getY).min(Double::compareTo).orElseThrow();
-        var max = points.stream().map(Vector3D::getY).max(Double::compareTo).orElseThrow();
+        Double min = points.stream().map(Vector3D::getY).min(Double::compareTo).orElseThrow(null);
+        Double max = points.stream().map(Vector3D::getY).max(Double::compareTo).orElseThrow(null);
 
         return max - min;
     }
 
     public static boolean roughEquals(Vector3D p1, Vector3D p2) {
-        var dx = Math.abs(p1.x - p2.x);
-        var dy = Math.abs(p1.y - p2.y);
-        var dz = Math.abs(p1.z - p2.z);
+        double dx = Math.abs(p1.x - p2.x);
+        double dy = Math.abs(p1.y - p2.y);
+        double dz = Math.abs(p1.z - p2.z);
 
         return dx < 0.001 && dy < 0.001 && dz < 0.001;
     }
