@@ -7,6 +7,7 @@ import com.artkuznet.converter.maxed.*;
 
 import java.util.*;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 public class FsmDataMapper {
 
@@ -19,16 +20,16 @@ public class FsmDataMapper {
     }
 
     public FloatingFSM.FSMData toFSMData(MaxObject object, Character ldbCharacter) {
-        var fsmData = new FloatingFSM.FSMData();
+        FloatingFSM.FSMData fsmData = new FloatingFSM.FSMData();
 
         fsmData.enemyData = true;
 
-        var oldObjectName = object.fullName;
+        String oldObjectName = object.fullName;
 
-        var onActivateMessages = getMessages(ldbCharacter.getOnActivateBefore().getList(), oldObjectName);
-        var onDeathMessages = getMessages(ldbCharacter.getOnDeathBefore().getList(), oldObjectName);
-        var onSpecialMessages = getMessages(ldbCharacter.getOnSpecialBefore().getList(), oldObjectName);
-        var onStartupMessages = getMessages(ldbCharacter.getStartupBefore().getList(), oldObjectName);
+        List<FloatingFSM.FSMData.Message> onActivateMessages = getMessages(ldbCharacter.getOnActivateBefore().getList(), oldObjectName);
+        List<FloatingFSM.FSMData.Message> onDeathMessages = getMessages(ldbCharacter.getOnDeathBefore().getList(), oldObjectName);
+        List<FloatingFSM.FSMData.Message> onSpecialMessages = getMessages(ldbCharacter.getOnSpecialBefore().getList(), oldObjectName);
+        List<FloatingFSM.FSMData.Message> onStartupMessages = getMessages(ldbCharacter.getStartupBefore().getList(), oldObjectName);
 
         fsmData.messageHandlers.add(getEnemyHandler("OnActivate", onActivateMessages));
         fsmData.messageHandlers.add(getEnemyHandler("OnDeath", onDeathMessages));
@@ -39,7 +40,7 @@ public class FsmDataMapper {
     }
 
     private FloatingFSM.FSMData.MessageHandler getEnemyHandler(String handlerName, List<FloatingFSM.FSMData.Message> messages) {
-        var handler = new FloatingFSM.FSMData.MessageHandler();
+        FloatingFSM.FSMData.MessageHandler handler = new FloatingFSM.FSMData.MessageHandler();
 
         handler.name = handlerName;
         handler.sendBefore = messages;
@@ -49,9 +50,9 @@ public class FsmDataMapper {
 
 
     public FloatingFSM.FSMData toFSMData(MaxObject object, LdbFSM ldbFSM, LdbDynamicMesh ldbDynamicMesh) {
-        var fsmData = new FloatingFSM.FSMData();
+        FloatingFSM.FSMData fsmData = new FloatingFSM.FSMData();
 
-        var oldObjectName = object.fullName;
+        String oldObjectName = object.fullName;
         if (object instanceof Dynamic) {
             oldObjectName = oldObjectName.replace(".DO", "");
         }
@@ -65,9 +66,9 @@ public class FsmDataMapper {
         if (object instanceof Dynamic) {
             String finalOldObjectName = oldObjectName;
             ldbDynamicMesh.getAnimations().getList().forEach(animation -> {
-                var handler = new FloatingFSM.FSMData.MessageHandler();
+                FloatingFSM.FSMData.MessageHandler handler = new FloatingFSM.FSMData.MessageHandler();
 
-                handler.name = "Animation(%s)".formatted(animation.getAnimationName());
+                handler.name = String.format("Animation(%s)", animation.getAnimationName());
                 handler.stateSpecific.put("Enter1st", getMessages(animation.getReturningFirstFrame().getList(), finalOldObjectName));
                 handler.stateSpecific.put("Enter2nd", getMessages(animation.getReachingSecondFrame().getList(), finalOldObjectName));
                 handler.stateSpecific.put("Leave1st", getMessages(animation.getLeavingFirstFrame().getList(), finalOldObjectName));
@@ -83,16 +84,16 @@ public class FsmDataMapper {
         fsmData.messageHandlers.addAll(getHandlers(ldbFSM.getStringSpecific(), oldObjectName, "FSM_Send(%s)"));
         fsmData.messageHandlers.addAll(getHandlers(ldbFSM.getStateSwitch(), oldObjectName, "FSM_Switch(%s)"));
 
-        fsmData.customStrings = ldbFSM.getStringSpecific().getList().stream().map(FSMEvent::getStateName).toList();
+        fsmData.customStrings = ldbFSM.getStringSpecific().getList().stream()
+                .map(FSMEvent::getStateName)
+                .collect(Collectors.toList());
 
-
-        var handlerStartup = new FloatingFSM.FSMData.MessageHandler();
+        FloatingFSM.FSMData.MessageHandler handlerStartup = new FloatingFSM.FSMData.MessageHandler();
         handlerStartup.name = "Startup";
         handlerStartup.sendBefore = getMessages(ldbFSM.getStartupBefore().getList(), oldObjectName);
         handlerStartup.sendAfter = getMessages(ldbFSM.getStartupAfter().getList(), oldObjectName);
 
-
-        var m = new LinkedHashMap<String, List<FloatingFSM.FSMData.Message>>();
+        Map<String, List<FloatingFSM.FSMData.Message>> m = new LinkedHashMap<>();
 
         if (!fsmData.defaultState.isEmpty()) {
             m.put(fsmData.defaultState, new ArrayList<>());
@@ -109,9 +110,9 @@ public class FsmDataMapper {
 
     private List<FloatingFSM.FSMData.MessageHandler> getHandlers(FSMEventContainer eventContainer, String objectName, String stateNameFormat) {
         return eventContainer.getList().stream().map(event -> {
-            var handler = new FloatingFSM.FSMData.MessageHandler();
+            FloatingFSM.FSMData.MessageHandler handler = new FloatingFSM.FSMData.MessageHandler();
 
-            handler.setName(stateNameFormat.formatted(event.getStateName()));
+            handler.setName(String.format(stateNameFormat, event.getStateName()));
 
             handler.sendBefore = getMessages(event.getBefore().getList(), objectName);
             handler.sendAfter = getMessages(event.getAfter().getList(), objectName);
@@ -124,37 +125,37 @@ public class FsmDataMapper {
             );
 
             return handler;
-        }).toList();
+        }).collect(Collectors.toList());
     }
 
     private List<FloatingFSM.FSMData.Message> getMessages(List<String> messages, String objectName) {
-        return messages.stream().map(m -> getMessage(m, objectName)).toList();
+        return messages.stream().map(m -> getMessage(m, objectName)).collect(Collectors.toList());
     }
 
     private FloatingFSM.FSMData.Message getMessage(String message, String objectName) {
-        var fsmMsg = new FloatingFSM.FSMData.Message();
+        FloatingFSM.FSMData.Message fsmMsg = new FloatingFSM.FSMData.Message();
 
         if (!message.contains("->")) {
             throw new RuntimeException();
         }
 
-        var objWithFunc = message.split("->");
+        String[] objWithFunc = message.split("->");
         if (objWithFunc.length != 2) {
             throw new RuntimeException();
         }
 
-        var targetObjectName = objWithFunc[0];
-        var functionWithParams = objWithFunc[1];
+        String targetObjectName = objWithFunc[0];
+        String functionWithParams = objWithFunc[1];
 
-        var matcher = PATTERN.matcher(functionWithParams);
+        java.util.regex.Matcher matcher = PATTERN.matcher(functionWithParams);
         if (!matcher.find() || matcher.groupCount() != 2) {
             throw new RuntimeException("Pattern error: " + functionWithParams);
         }
 
         String functionName = matcher.group(1);
         List<String> params = matcher.group(2).isEmpty()
-                ? List.of()
-                : Arrays.stream(matcher.group(2).split(",")).map(String::trim).toList();
+                ? Collections.emptyList()
+                : Arrays.stream(matcher.group(2).split(",")).map(String::trim).collect(Collectors.toList());
 
         if (targetObjectName.equalsIgnoreCase("player")
                 || targetObjectName.equalsIgnoreCase("activator")
@@ -164,13 +165,13 @@ public class FsmDataMapper {
                 || targetObjectName.equalsIgnoreCase("maxpayne_gamemode")
         ) {
             if (functionName.equalsIgnoreCase("GM_EnableExit") || functionName.equalsIgnoreCase("GM_EnableExitAIActivation")) {
-                var exitName = params.get(0).substring(params.get(0).substring(2).indexOf("::") + 4);
+                String exitName = params.get(0).substring(params.get(0).substring(2).indexOf("::") + 4);
                 targetObjectName = params.get(0).substring(0, params.get(0).lastIndexOf("::"));
                 functionName = functionName.substring(3);
-                fsmMsg.message = targetObjectName + "->" + "%s(%s, %s);".formatted(functionName, params.get(1), exitName);
+                fsmMsg.message = targetObjectName + "->" + String.format("%s(%s, %s);", functionName, params.get(1), exitName);
                 fsmMsg.targetObjectName = targetObjectName;
                 fsmMsg.functionName = functionName;
-                fsmMsg.params = mapParams(List.of(params.get(1), exitName));
+                fsmMsg.params = mapParams(Arrays.asList(params.get(1), exitName));
             } else {
                 fsmMsg.message = targetObjectName + "->" + functionWithParams;
                 fsmMsg.targetObjectName = "";
@@ -178,8 +179,8 @@ public class FsmDataMapper {
                 fsmMsg.params = mapParams(params);
             }
         } else {
-            var newTargetName = getNewObjectName(targetObjectName);
-            var newObjectName = getNewObjectName(objectName);
+            String newTargetName = getNewObjectName(targetObjectName);
+            String newObjectName = getNewObjectName(objectName);
 
             fsmMsg.message = getMessageTargetName(newObjectName, newTargetName) + "->" + functionWithParams;
             fsmMsg.targetObjectName = newTargetName;
@@ -207,18 +208,18 @@ public class FsmDataMapper {
                 p = p.substring(0, p.length() - 1);
             }
 
-            var chunks = new ArrayList<>(Arrays.stream(p.substring(2).split("::")).toList());
-            var newP = "::" + chunks.get(0) + "::";
+            List<String> chunks = new ArrayList<>(Arrays.stream(p.substring(2).split("::")).collect(Collectors.toList()));
+            String newP = "::" + chunks.get(0) + "::";
             chunks.remove(0);
             newP += String.join("_", chunks);
 
             if (quotes) {
-                newP = "\"%s\"".formatted(newP);
+                newP = String.format("\"%s\"", newP);
             }
 
             return newP;
 
-        }).toList();
+        }).collect(Collectors.toList());
     }
 
     private String getMessageTargetName(String objectName, String targetName) {
@@ -234,11 +235,11 @@ public class FsmDataMapper {
     }
 
     private String getNewObjectName(String objectName) {
-        var newName1 = objectNames.get(objectName);
-        var newName2 = objectNames.get(objectName + ".DO");
-        var newName3 = objectNames.get(objectName + ".TRIGGER");
+        String newName1 = objectNames.get(objectName);
+        String newName2 = objectNames.get(objectName + ".DO");
+        String newName3 = objectNames.get(objectName + ".TRIGGER");
 
-        var newName = newName1 != null ? newName1 : (newName2 != null ? newName2 : newName3);
+        String newName = newName1 != null ? newName1 : (newName2 != null ? newName2 : newName3);
 
         if (newName == null) {
             throw new RuntimeException("New object name not found: " + objectName);
